# rcpcli

./: Cargo.toml
src/: client.rs  connection_string.rs  error.rs  lib.rs  main.rs  service.rs
tests/: client_tests.rs  connection_string_tests.rs  error_tests.rs  service_tests.rs
